kubernetes/deploy/k8s-llng-namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
    name: auth
spec:
    finalizers:
        - kubernetes
status:
    phase: Active
