kubernetes/deploy/k8s-llng-nginx.yaml
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
    name: llng
    namespace: auth
spec:
    replicas: 1
    template:
        metadata:
            labels:
                app: llng
        spec:
            containers:
                - name: k8s-lln-nginx
                  imagePullPolicy: "Always"
                  image: <your registry>/k8s-llng-nginx:v0.0.1
                  ports:
                        - name: "http"
                          containerPort: 80
                  volumeMounts:
                    - mountPath: /etc/nginx/sites-available
                      name: nginxconfavailable
                      readOnly: false
                    - mountPath: /etc/nginx/sites-enabled
                      name: nginxconfenabled
                      readOnly: false
                    - mountPath: /var/run/llng-fastcgi-server/llng-fastcgi.sock
                      name: fastcgisocket
                      readOnly: false
                - name: k8s-lln-fastcgi
                  imagePullPolicy: "Always"
                  image: <your registry>/k8s-llng-fastcgi:v0.0.1
                  ports:
                        - name: "http"
                          containerPort: 80
                  volumeMounts:
                    - mountPath: /etc/nginx/sites-available
                      name: nginxconfavailable
                      readOnly: false
                    - mountPath: /etc/nginx/sites-enabled
                      name: nginxconfenabled
                      readOnly: false
                    - mountPath: /var/run/llng-fastcgi-server/llng-fastcgi.sock
                      name: fastcgisocket
                      readOnly: false
           volumes:
               - name: nginxconfavailable
                  emptyDir:
                     medium: Memory
               - name: fastcgisocket
                  emptyDir:
                     medium: Memory
               - name: nginxconfenabled
                  emptyDir:
                     medium: Memory
