kubernetes/deploy/k8s-llng-svc.yaml
---
apiVersion: v1
kind: Service
metadata:
    name: llng
    namespace: auth
    labels:
        app: llng
spec:
    ports:
        - name: "http"
          port: 80
          protocol: TCP
          targetPort: 80
